--- a/app/src/main/res/layout/activity_score_board.xml
+++ b/app/src/main/res/layout/activity_score_board.xml
@@ -17,11 +17,12 @@
                 android:textColor="@color/ans_correct"
                 android:layout_toLeftOf="@+id/tvCorrectAnswer"/>
 
-            <texus.app.controls.TextViewWithFont
+            <TextView
                 style="@style/style_rel_item_value"
                 android:id="@+id/tvCorrectAnswer"
                 android:textColor="@color/ans_correct"
                 android:text="--"
+                android:textStyle="bold"
                 />
         </RelativeLayout>
 
@@ -33,10 +34,11 @@
                 android:textColor="@color/ans_wrong"
                 android:layout_toLeftOf="@+id/tvWrongAnswer"/>
 
-            <texus.app.controls.TextViewWithFont
+            <TextView
                 style="@style/style_rel_item_value"
                 android:id="@+id/tvWrongAnswer"
                 android:textColor="@color/ans_wrong"
+                android:textStyle="bold"
                 android:text="--"
                 />
         </RelativeLayout>
@@ -50,9 +52,10 @@
                 android:textColor="@color/un_answered"
                 android:layout_toLeftOf="@+id/tvUnAnswered"/>
 
-            <texus.app.controls.TextViewWithFont
+            <TextView
                 style="@style/style_rel_item_value"
                 android:id="@+id/tvUnAnswered"
+                android:textStyle="bold"
                 android:textColor="@color/un_answered"
                 android:text="--"
                 />
