--- a/app/src/main/res/menu/menu_share.xml
+++ b/app/src/main/res/menu/menu_share.xml
@@ -7,4 +7,11 @@
         android:orderInCategory="100"
         android:title="Share"
         app:showAsAction="always|withText" />
+
+    <item
+        android:id="@+id/action_help"
+        android:icon="@drawable/ic_help"
+        android:orderInCategory="100"
+        android:title="Help"
+        app:showAsAction="always|withText" />
 </menu>
